Bug 1356637 - Blocklist a Nahimic DLL which is causing app update problems. r=bsmedberg

MozReview-Commit-ID: D9iEcuTMNRx